timeware/src/objects/Call_Back_Policy__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Call_Back_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Call Back Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Back_Minimum_Hours__c</fullName>
        <label>Call Back Minimum Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Back_Policy_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Back_Premium_Type__c</fullName>
        <label>Call Back Premium Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doubletime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call Back Policy</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Call Back Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Back Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>